--- a/classEx/styles.css
+++ b/classEx/styles.css
@@ -18,3 +18,11 @@
     color: black;
     padding: 10px;
 }
+.label {
+    text-align: center;
+}
+
+div {
+    border-radius: 20px;
+    border: solid 1px black;
+}
