--- a/classEx/styles.css
+++ b/classEx/styles.css
@@ -28,3 +28,11 @@
     width: 75%;
     height: 100px;
 }
+
+#bgColor1 {
+    background-color: purple;
+}
+
+#bgColor2 {
+    background-color: yellow;
+}
