--- a/SignIn-Registration/styles.css
+++ b/SignIn-Registration/styles.css
@@ -12,8 +12,13 @@
     color: black;
     padding: 10px;
 }
-#form {
+#formData {
     margin: 0 auto;
+    text-align: center;
+    color: black;
+    padding: 10px;
+}
+#formData2 {
     text-align: center;
     color: black;
     padding: 10px;
