--- a/classEx/styles.css
+++ b/classEx/styles.css
@@ -1,6 +1,6 @@
 /* FOR VARIABLES */
 :root {
-	--primary-color: #0e1113;
+    --primary-color: black;
 	--text-color: #ececec;
 	--highlight-color: #fffe03;
 }
@@ -13,7 +13,7 @@
 }
 
 body {
-	font-family: segoe ui;
+	font-family: Arial, Helvetica, sans-serif
 	font-size: 62.5%;
 }
 
