--- a/classEx/styles.css
+++ b/classEx/styles.css
@@ -68,6 +68,6 @@
             display: block;
         }
         
-        #divLeft_CELinks, #divLeft_ALinks{
+        #divLeft_CELinks, #divLeft_ALinks, #divLeft_RLinks{
             display: none;
         }
