--- a/classEx/js/styles.css
+++ b/classEx/js/styles.css
@@ -1,13 +1,42 @@
 .main {
-    background-color: lightslategray;
+    background-color: gray;
     margin: 0 auto;
-    padding: auto;
+    padding: 2px 2px auto;
     width: max-content;
     overflow: hidden;
 }
 
 .row {
-    margin: 
+    margin: 0 2px auto;
     height: max-content;
     overflow: hidden;
+}
+#display1 {
+    margin: 1px 0;
+    color: teal;
+    text-align: right;
+    font-size: 18px;
+    width: 270px;
+    height: 18px;
+}
+#display2 {
+    background-color: aliceblue;
+    margin: 0 1px;
+    text-align: right;
+    font-size: xx-large;
+    width: 273px;
+    height: 40px;
+}
+button {
+    background-color: gray;
+    font-size: xx-large;
+    width: 70px;
+    height: 70px;
+    float: left;
+}
+button:hover {
+    background-color: purple;
+}
+button:active {
+    background-color: cornflowerblue;
 }
