--- a/classEx/js/styles.css
+++ b/classEx/js/styles.css
@@ -13,7 +13,7 @@
 }
 #display1 {
     margin: 1px 0;
-    color: teal;
+    color: white;
     text-align: right;
     font-size: 18px;
     width: 270px;
