--- a/classEx/toDoList/style.css
+++ b/classEx/toDoList/style.css
@@ -16,8 +16,8 @@ body{
 .header{
     width: 380px;
     height:200px;
-    background-image: url('../img/bg.png');
-    background-size: 100% 200%;
+    background-image: url('bg.jpg');
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     border-radius: 15px 15px 0 0;
     position: relative;
