--- a/classEx/toDoList/css/style.css
+++ b/classEx/toDoList/css/style.css
@@ -1,3 +1,4 @@
+/* ------------ youtube.com/CodeExplained ------------ */
 body{
     padding: 0;
     margin: 0;
@@ -16,8 +17,8 @@ body{
 .header{
     width: 380px;
     height:200px;
-    background-image: url('bg.jpg');
-    background-size: 100% 100%;
+    background-image: url('../img/bg2.jpg');
+    background-size: 100% 200%;
     background-repeat: no-repeat;
     border-radius: 15px 15px 0 0;
     position: relative;
